# sandbox-interview

./: .gitignore  Makefile  README.md  pubspec.yaml
.github/workflows/: ci.yml  deploy-server.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
integration_test/: main_test.dart
lib/: main.dart
lib/core/: configuration.dart  ws_connection.dart
lib/core/hive_models/: user.dart  user.g.dart
lib/core/media_device/: media_device_bloc.dart  media_device_event.dart  media_device_state.dart
lib/core/messages/: call_state.dart  candidate.dart  message.dart  offer.dart  status.dart
lib/di/: injection.config.dart  injection.dart  module.dart
lib/feature/call_offer/presentation/pages/: call_offer.dart
lib/feature/call_page/data/data_sources/: local_datasource.dart  ws_source.dart
lib/feature/call_page/data/models/: candidate.dart  message.dart  offer.dart
lib/feature/call_page/data/repositories/: repository.dart  signaling.dart
lib/feature/call_page/domain/entities/: candidate.dart  message.dart  offer.dart
lib/feature/call_page/domain/repositories/: repository.dart  signaling.dart
lib/feature/call_page/domain/use_cases/: initialize_media.dart  media_device.dart
lib/feature/call_page/presentation/bloc/: call_bloc.dart  (+2 more)
server/: Cargo.toml  Dockerfile
server/src/: main.rs  session.rs  sessions_store.rs
test/: widget_test.dart
test/core/: ws_connection_test.dart
test/feature/contacts/data/: repository_test.dart
test/feature/login_page/data/: repository_test.dart
test/feature/login_page/presentation/: bloc_test.dart
(+29 files in other folders)
