[package]
name = "server"
version = "0.1.0"
edition = "2018"

[dependencies]
actix = "=0.11.0-beta.3"
actix-http = "=3.0.0-beta.5"
actix-service = "=2.0.0-beta.5"  # only to pin
actix-web = "=4.0.0-beta.5"
actix-web-actors = "=4.0.0-beta.4"
bytestring = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
